--- a/.gitignore
+++ b/.gitignore
@@ -3,22 +3,22 @@
 /Terraform/**/.terraform/*
 
 # Crash log files
-crash.log
-crash.*.log
+/Terraform/**/crash.log
+/Terraform/**/crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version 
 # control as they are data points which are potentially sensitive and subject 
 # to change depending on the environment.
-*.tfvars
-*.tfvars.json
+/Terraform/**/*.tfvars
+/Terraform/**/*.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
+/Terraform/**/override.tf
+/Terraform/**/override.tf.json
+/Terraform/**/*_override.tf
+/Terraform/**/*_override.tf.json
 
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
@@ -27,5 +27,5 @@ override.tf.json
 # example: *tfplan*
 
 # Ignore CLI configuration files
-.terraformrc
-terraform.rc
+/Terraform/**/.terraformrc
+/Terraform/**/terraform.rc
