--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -39,7 +39,7 @@ jobs:
     - name: 'Run unit test'
       shell: bash
       run: |
-        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/Test'
+        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/Test/test'
         python -m pytest .
     - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1
