--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -31,7 +31,7 @@ jobs:
     - name: 'Resolve Project Dependencies Using Pip'
       shell: bash
       run: |
-        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/PythonCounter'
+        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/test'
         python -m pip install --upgrade pip
         pip install -r requirements.txt --target=".python_packages/lib/site-packages"
         popd
