--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/test/tests'
         pip install pytest
-        pip install azure-cosmos
+        pip install azure-functions
         pip install -r requirements.txt --target=".python_packages/lib/site-packages"
         pytest .
     - name: 'Run Azure Functions Action'
