--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -43,4 +43,9 @@ jobs:
         pip install azure-functions
         pip install -r requirements.txt --target=".python_packages/lib/site-packages"
         pytest .
-
+    - name: 'Run Azure Functions Action'
+      uses: Azure/functions-action@v1
+      id: fa
+      with:
+        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
+        package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/PythonCounter'
